<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/main_menu_characters"/>

        <item
            android:id="@+id/nav_spells"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/main_menu_spells"/>

        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/main_menu_skills"/>

        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/main_menu_items"/>

        <item
            android:id="@+id/nav_monsters"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/main_menu_monsters"/>

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
