<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_name"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="text_school_and_level"/>

        <TextView
            android:id="@+id/text_school_and_level"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="text_school_and_level"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/separator_items"/>

        <TextView
            style="@style/TextTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/spell_details_label_casting_time"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_label_ritual"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_normal"
                android:text="@string/spell_details_label_ritual"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/text_casting_time"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text_casting_time"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/separator_items"/>

        <TextView
            style="@style/TextTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/spell_details_label_range"/>


        <TextView
            android:id="@+id/text_range"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="text_range"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/separator_items"/>

        <TextView
            style="@style/TextTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/spell_details_label_duration"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_label_concentration"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_normal"
                android:text="@string/spell_details_label_concentration"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/text_duration"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text_duration"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/separator_items"/>

        <TextView
            style="@style/TextTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/spell_details_label_components"/>

        <TextView
            android:id="@+id/text_components"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="text_components"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/separator_items"/>

        <TextView
            style="@style/TextTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/spell_details_label_description"/>

        <TextView
            android:id="@+id/text_description"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="text_description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/separator_items"/>

        <LinearLayout
            android:id="@+id/layout_up_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTitleSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:text="@string/spell_details_label_up_level"/>

            <TextView
                android:id="@+id/text_up_level"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:text="text_up_level"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@drawable/separator_items"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_classes"
            style="@style/TextTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:gravity="end"
            android:text="text_classes"/>

    </LinearLayout>
</ScrollView>